force-app/main/default/objects/Commission_Statement__c/Commission_Statement__c.object-meta.xml
<CustomObject>
    <label>Commission Statement</label>
    <nameField>
        <displayFormat>CS-{0000000000}</displayFormat>
        <label>Statement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commission Statements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>