force-app/main/default/objects/Commission_Statement__c/fields/Base_Commission__c.field-meta.xml
<CustomField>
    <fullName>Base_Commission__c</fullName>
    <label>Base Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>