force-app/main/default/objects/Commission_Statement__c/fields/Calculation_Date__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Date__c</fullName>
    <label>Calculation Date</label>
    <type>DateTime</type>
</CustomField>