force-app/main/default/objects/Commission_Statement__c/fields/Promotion_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Bonus__c</fullName>
    <label>Promotion Bonus</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>