force-app/main/default/objects/Commission_Statement__c/fields/Team_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Team_Bonus__c</fullName>
    <label>Team Bonus</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>