force-app/main/default/objects/Commission_Statement__c/fields/Total_Commission__c.field-meta.xml
<CustomField>
    <fullName>Total_Commission__c</fullName>
    <label>Total Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>